Fri Oct 16 09:39:07 2009 CEST

DataFilter v0.1015 released

(DataFilter::Source::TAB): fix bug causing all whitespace to be removed from
the column name instead of the trailing whitespace

Thu Oct 15 14:14:06 2009 CEST

DataFilter v0.1014 released

(scripts/datafilter, DataFilter::Source::TAB, Vend::DataFilter): new options --skip-before,
--rowspan, pass table in add_record call

Tue Dec  2 12:26:46 2008 CET

DataFilter v0.1013 released

(Vend::DataFilter, DataFilter::Source::CSV): accept and pass through
delimiter, quote_char and escape_char parameters

Fri Nov 23 16:17:08 2007 CET

DataFilter v0.1012 released

Fri Nov 23 16:14:54 2007 CET
(Vend::DataFilter): encapsulate loop over records to catch any backend errors

Wed Nov  7 11:34:05 2007 CET
(DataFilter): more verbose error message on ZIP read failures

Mon Nov  5 13:40:37 2007 CET

DataFilter v0.1011 released

Mon Nov  5 11:19:57 2007 CET
(Vend::DataFilter): stop logging of errors in upload data

Fri Nov  2 13:23:09 2007 CET

DataFilter v0.1010 released

Fri Nov  2 13:21:19 2007 CET
(DataFilter): new method unpack

Tue Oct 16 15:18:26 2007 CEST
(Magic): added big kludge for self extracting ZIP archives

Tue Oct 16 13:49:23 2007 CEST
(DataFilter): automatic type detection and unpacking of ZIP archives
(XBase): new methods rows, enum_records; default to first "table"
(Vend::DataFilter): support XBase source

Tue Oct 16 12:17:19 2007 CEST
(XBase): new methods tables, columns; recognize name parameter

Tue Oct 16 11:44:15 2007 CEST
(Magic): detection of ZIP and XBase files added